[project]
name = "perqi"
version = "0.1.0"
description = "Python Efficient Rust Quadtree Interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
perqi-benchmark = "perqi.benchmark:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
